--- a/DES_PRODUCT/iphone14.html
+++ b/DES_PRODUCT/iphone14.html
@@ -67,7 +67,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav justify-content-between w-100">
                             <li class="nav-item mx-1 mx-lg-2 text-center active">
-                                <a class="nav-link active" href="#">
+                                <a class="nav-link active" href="../index.html">
                                     Trang Chủ
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
@@ -311,7 +311,7 @@
                     </div>
                 </div>
                 <div class="specifications__left col-12 col-lg-7 shadow pt-4">
-                    <div class="specifications__left__content overflow-hidden">
+                    <div class="specifications__left__content specifications__left__content__collage overflow-hidden">
                         <p>Tất cả iPhone chính hãng VN/A được phân phối tại Apple Mart đều được nhập trực tiếp từ Công
                             ty TNHH Apple Việt Nam. HoangHa Mobile là nhà bán lẻ ủy quyền chính thức của Apple tại Việt
                             Nam.
