--- a/PRODUCT/airpods.html
+++ b/PRODUCT/airpods.html
@@ -73,7 +73,7 @@
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-1 mx-lg-2 text-center active">
+                            <li class="nav-item mx-1 mx-lg-2 text-center">
                                 <a class="nav-link" href="./iPhone.html">
                                     iPhone
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
@@ -91,7 +91,7 @@
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-1 mx-lg-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center active">
                                 <a class="nav-link" href="./airpods.html">
                                     AirPods
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
@@ -231,78 +231,78 @@
                     <div class="product row justify-content-center">
                         <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/airpod-pro-2.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
                                 <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">iPhone 14
-                                        Pro (256GB) - Chính hãng VN/A</a></div>
+                                        class="text-black text-decoration-none">AirPods Pro 2 - Chính hãng Apple Việt
+                                        Nam</a></div>
                                 <hr>
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
                         <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/airpod-pro-2.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
                                 <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">iPhone 14
-                                        Pro (256GB) - Chính hãng VN/A</a></div>
+                                        class="text-black text-decoration-none">AirPods Pro 2 - Chính hãng Apple Việt
+                                        Nam</a></div>
                                 <hr>
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
                         <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/airpod-pro-2.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
                                 <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">iPhone 14
-                                        Pro (256GB) - Chính hãng VN/A</a></div>
+                                        class="text-black text-decoration-none">AirPods Pro 2 - Chính hãng Apple Việt
+                                        Nam</a></div>
                                 <hr>
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
                         <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/airpod-pro-2.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
                                 <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">iPhone 14
-                                        Pro (256GB) - Chính hãng VN/A</a></div>
+                                        class="text-black text-decoration-none">AirPods Pro 2 - Chính hãng Apple Việt
+                                        Nam</a></div>
                                 <hr>
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
                         <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/airpod-pro-2.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
                                 <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">iPhone 14
-                                        Pro (256GB) - Chính hãng VN/A</a></div>
+                                        class="text-black text-decoration-none">AirPods Pro 2 - Chính hãng Apple Việt
+                                        Nam</a></div>
                                 <hr>
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
                         <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/airpod-pro-2.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
                                 <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">iPhone 14
-                                        Pro (256GB) - Chính hãng VN/A</a></div>
+                                        class="text-black text-decoration-none">AirPods Pro 2 - Chính hãng Apple Việt
+                                        Nam</a></div>
                                 <hr>
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
