--- a/PRODUCT/iPad.html
+++ b/PRODUCT/iPad.html
@@ -73,13 +73,13 @@
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-1 mx-lg-2 text-center active">
+                            <li class="nav-item mx-1 mx-lg-2 text-center">
                                 <a class="nav-link" href="./iPhone.html">
                                     iPhone
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
-                            <li class="nav-item mx-1 mx-lg-2 text-center">
+                            <li class="nav-item mx-1 mx-lg-2 text-center active">
                                 <a class="nav-link" href="./iPad.html">
                                     iPad
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
@@ -116,7 +116,7 @@
         <div class="wrap">
             <div class="menu mb-3">
                 <i class="fa fa-home"></i> <a href="../index.html">Trang chủ</a> <i class="fa fa-angle-right"></i>
-                <span>iPhone</span>
+                <span>iPad</span>
             </div>
             <div class="content row justify-content-center justify-content-md-between">
                 <div class="content__filter col-12 col-md-3 py-2" style="height: fit-content;">
@@ -231,78 +231,78 @@
                     <div class="product row justify-content-center">
                         <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/ipad_m1_128gb.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
                                 <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">iPhone 14
-                                        Pro (256GB) - Chính hãng VN/A</a></div>
+                                        class="text-black text-decoration-none">iPad Pro M1 12.9"- (2021) - Wifi -
+                                        128GB</a></div>
                                 <hr>
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
                         <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/ipad_m1_128gb.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
                                 <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">iPhone 14
-                                        Pro (256GB) - Chính hãng VN/A</a></div>
+                                        class="text-black text-decoration-none">iPad Pro M1 12.9"- (2021) - Wifi -
+                                        128GB</a></div>
                                 <hr>
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
                         <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/ipad_m1_128gb.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
                                 <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">iPhone 14
-                                        Pro (256GB) - Chính hãng VN/A</a></div>
+                                        class="text-black text-decoration-none">iPad Pro M1 12.9"- (2021) - Wifi -
+                                        128GB</a></div>
                                 <hr>
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
                         <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/ipad_m1_128gb.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
                                 <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">iPhone 14
-                                        Pro (256GB) - Chính hãng VN/A</a></div>
+                                        class="text-black text-decoration-none">iPad Pro M1 12.9"- (2021) - Wifi -
+                                        128GB</a></div>
                                 <hr>
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
                         <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/ipad_m1_128gb.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
                                 <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">iPhone 14
-                                        Pro (256GB) - Chính hãng VN/A</a></div>
+                                        class="text-black text-decoration-none">iPad Pro M1 12.9"- (2021) - Wifi -
+                                        128GB</a></div>
                                 <hr>
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
                         <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/ipad_m1_128gb.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
                                 <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
-                                        class="text-black text-decoration-none">iPhone 14
-                                        Pro (256GB) - Chính hãng VN/A</a></div>
+                                        class="text-black text-decoration-none">iPad Pro M1 12.9"- (2021) - Wifi -
+                                        128GB</a></div>
                                 <hr>
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
