do coast continute

--- a/PRODUCT/macbook.html
+++ b/PRODUCT/macbook.html
@@ -45,7 +45,7 @@
                         <i class="fa fa-user"></i> Đăng nhập
                     </a>
                     <span class="header__user__line mx-2">|</span>
-                    <a class="text-decoration-none" href="./CART/index.html">
+                    <a class="text-decoration-none" href="../CART/index.html">
                         <i class="fa fa-shopping-cart"></i> Giỏ hàng
                     </a>
                 </div>
@@ -229,7 +229,7 @@
                 </div>
                 <div class="content__product col-8">
                     <div class="product row justify-content-center">
-                        <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
+                        <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
                                 <a href="./DES_PRODUCT/iphone14.html"><img src="./img/mac-air-m2-256gb.webp" alt=""
                                         class="w-100"></a>
@@ -242,7 +242,7 @@
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
-                        <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
+                        <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
                                 <a href="./DES_PRODUCT/iphone14.html"><img src="./img/mac-air-m2-256gb.webp" alt=""
                                         class="w-100"></a>
@@ -255,7 +255,7 @@
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
-                        <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
+                        <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
                                 <a href="./DES_PRODUCT/iphone14.html"><img src="./img/mac-air-m2-256gb.webp" alt=""
                                         class="w-100"></a>
@@ -268,7 +268,7 @@
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
-                        <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
+                        <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
                                 <a href="./DES_PRODUCT/iphone14.html"><img src="./img/mac-air-m2-256gb.webp" alt=""
                                         class="w-100"></a>
@@ -281,7 +281,7 @@
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
-                        <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
+                        <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
                                 <a href="./DES_PRODUCT/iphone14.html"><img src="./img/mac-air-m2-256gb.webp" alt=""
                                         class="w-100"></a>
@@ -294,7 +294,7 @@
                                 <div class="card-text fw-bold">27,390,000 đ</div>
                             </div>
                         </div>
-                        <div class="col-5 col-md-3 card mx-2 my-3 border-0 p-0">
+                        <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
                                 <a href="./DES_PRODUCT/iphone14.html"><img src="./img/mac-air-m2-256gb.webp" alt=""
                                         class="w-100"></a>
