--- a/DES_PRODUCT/iphone14.html
+++ b/DES_PRODUCT/iphone14.html
@@ -14,9 +14,9 @@
 </head>
 
 <body>
+
     <!-- HEADER -->
     <header>
-
         <!-- WELCOME -->
         <section class="header__welcome bg-light">
             <div class="wrap d-flex justify-content-between py-2">
@@ -44,9 +44,9 @@
                         <i class="fa fa-user"></i> Đăng nhập
                     </a>
                     <span class="header__user__line mx-2">|</span>
-                    <span>
+                    <a href="../CART/index.html">
                         <i class="fa fa-shopping-cart"></i> Giỏ hàng
-                    </span>
+                    </a>
                 </div>
             </div>
         </section>
@@ -73,31 +73,31 @@
                                 </a>
                             </li>
                             <li class="nav-item mx-1 mx-lg-2 text-center">
-                                <a class="nav-link active" href="#">
+                                <a class="nav-link active" href="../PRODUCT/iPhone.html">
                                     iPhone
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
                             <li class="nav-item mx-1 mx-lg-2 text-center">
-                                <a class="nav-link active" href="#">
+                                <a class="nav-link active" href="../PRODUCT/iPad.html">
                                     iPad
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
                             <li class="nav-item mx-1 mx-lg-2 text-center">
-                                <a class="nav-link active" href="#">
+                                <a class="nav-link active" href="../PRODUCT/macbook.html">
                                     MacBook
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
                             <li class="nav-item mx-1 mx-lg-2 text-center">
-                                <a class="nav-link active" href="#">
+                                <a class="nav-link active" href="../PRODUCT/airpods.html">
                                     AirPods
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
                             </li>
                             <li class="nav-item mx-1 mx-lg-2 text-center">
-                                <a class="nav-link active" href="#">
+                                <a class="nav-link active" href="../PRODUCT/orther.html">
                                     Khác
                                     <i class="fa fa-angle-down ps-1 ps-lg-2"></i>
                                 </a>
@@ -124,24 +124,31 @@
                 <div class="row">
                     <div class="col-12 col-lg-4">
                         <div class="card border-0">
-                            <div class="img p-5">
-                                <img src="./img/iPhone_14_Pro.webp" class="card-img-top" alt="...">
+                            <div class="p-5 d-flex justify-content-center" id="imageMain">
+                                <img src="./img/ip14-prm-black.webp" class="card-img-top" alt="..."
+                                    style="max-width: 300px;">
                             </div>
                             <div class="card-body">
-                                <div class="row align-items-center">
+                                <div class="row align-items-center" id="listImages">
                                     <div class="col">
-                                        <button class="border-0 h-100 p-3"><i class="fa fa-caret-left"></i></button>
+                                        <button class="border-0 h-100 p-3" id="product-image-pre"><i
+                                                class="fa fa-caret-left"></i></button>
                                     </div>
-                                    <div class="col"><img src="./img/iPhone_14_Pro.webp" class="card-img-top" alt="...">
+                                    <div class="col"><img src="./img/ip14-prm-black.webp" class="card-img-top" alt="..."
+                                            style="max-width: 100px;">
                                     </div>
-                                    <div class="col"><img src="./img/iPhone_14_Pro.webp" class="card-img-top" alt="...">
+                                    <div class="col"><img src="./img/ip14-prm-dark.webp" class="card-img-top" alt="..."
+                                            style="max-width: 100px;">
                                     </div>
-                                    <div class="col"><img src="./img/iPhone_14_Pro.webp" class="card-img-top" alt="...">
+                                    <div class="col"><img src="./img/ip14-prm-white.webp" class="card-img-top" alt="..."
+                                            style="max-width: 100px;">
                                     </div>
-                                    <div class="col"><img src="./img/iPhone_14_Pro.webp" class="card-img-top" alt="...">
+                                    <div class="col"><img src="./img/ip14-prm-yellow.webp" class="card-img-top"
+                                            alt="..." style="max-width: 100px;">
                                     </div>
                                     <div class="col">
-                                        <button class="border-0 h-100 p-3"><i class="fa fa-caret-right"></i></button>
+                                        <button class="border-0 h-100 p-3" id="product-image-next"><i
+                                                class="fa fa-caret-right"></i></button>
                                     </div>
                                 </div>
                             </div>
@@ -149,7 +156,7 @@
                     </div>
                     <div class="col-12 col-lg-6 m-auto">
                         <div class="mb-2">
-                            <h4 class="price__color fw-bold d-inline">20.000.000đ</h4> / Giá đã bao gồm 10% VAT
+                            <h4 class="price__color fw-bold d-inline">20,000,000đ</h4> / Giá đã bao gồm 10% VAT
                         </div>
                         <div class="text-white text-center py-1 mb-2">
                             Miễn phí vận chuyển toàn quốc <i class="fa fa-shipping-fast text-white"></i>
@@ -159,32 +166,35 @@
                             <div class="radio-buttons">
                                 <div class="version form-check-inline py-1 px-2 rounded-3">
                                     <div>
-                                        <input type="radio" name="phone-version" id="phone-version-128GB" value="128GB">
+                                        <input type="radio" name="phone-version" id="phone-version-128GB"
+                                            value="128 GB">
                                         <label class="form-check-label" for="phone-version-128GB">128GB</label>
                                     </div>
-                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                    <strong class="price__color d-block ps-0">20,000,000</strong>
                                 </div>
                                 <div class="version form-check-inline py-1 px-2 rounded-3">
                                     <div>
-                                        <input type="radio" name="phone-version" id="phone-version-256GB" value="256GB">
+                                        <input type="radio" name="phone-version" id="phone-version-256GB"
+                                            value="256 GB">
                                         <label class="form-check-label" for="phone-version-256GB">256GB</label>
                                     </div>
-                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                    <strong class="price__color d-block ps-0">20,000,000</strong>
                                 </div>
                                 <div class="version form-check-inline py-1 px-2 rounded-3">
                                     <div>
-                                        <input type="radio" name="phone-version" id="phone-version-512GB" value="512GB">
+                                        <input type="radio" name="phone-version" id="phone-version-512GB"
+                                            value="512 GB">
                                         <label class="form-check-label" for="phone-version-512GB">512GB</label>
                                     </div>
-                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                    <strong class="price__color d-block ps-0">20,000,000</strong>
                                 </div>
                                 <div class="version form-check-inline py-1 px-2 rounded-3">
                                     <div>
-                                        <input type="radio" name="phone-version" id="phone-version-1024GB"
+                                        <input type="radio" name="phone-version" id="phone-version-1024 GB"
                                             value="1024GB">
                                         <label class="form-check-label" for="phone-version-1024GB">1024GB</label>
                                     </div>
-                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                    <strong class="price__color d-block ps-0">20,000,000</strong>
                                 </div>
                             </div>
                         </div>
@@ -193,31 +203,31 @@
                             <div class="">
                                 <div class="version form-check-inline py-1 px-2 rounded-3">
                                     <div>
-                                        <input type="radio" name="phone-version" id="phone-white" value="white">
-                                        <label class="form-check-label" for="phone-white">White</label>
+                                        <input type="radio" name="phone-color" id="phone-white" value="Black">
+                                        <label class="form-check-label" for="phone-white">Black</label>
                                     </div>
-                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                    <strong class="price__color d-block ps-0">20,000,000</strong>
                                 </div>
                                 <div class="version form-check-inline py-1 px-2 rounded-3">
                                     <div>
-                                        <input type="radio" name="phone-version" id="phone-green" value="256GB">
-                                        <label class="form-check-label" for="phone-green">Green</label>
+                                        <input type="radio" name="phone-color" id="phone-green" value="Dark">
+                                        <label class="form-check-label" for="phone-green">Dark</label>
                                     </div>
-                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                    <strong class="price__color d-block ps-0">20,000,000</strong>
                                 </div>
                                 <div class="version form-check-inline py-1 px-2 rounded-3">
                                     <div>
-                                        <input type="radio" name="phone-version" id="phone-blue" value="512GB">
-                                        <label class="form-check-label" for="phone-blue">Blue</label>
+                                        <input type="radio" name="phone-color" id="phone-blue" value="White">
+                                        <label class="form-check-label" for="phone-blue">White</label>
                                     </div>
-                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                    <strong class="price__color d-block ps-0">20,000,000</strong>
                                 </div>
                                 <div class="version form-check-inline py-1 px-2 rounded-3">
                                     <div>
-                                        <input type="radio" name="phone-version" id="phone-pink" value="1024GB">
-                                        <label class="form-check-label" for="phone-pink">Pink</label>
+                                        <input type="radio" name="phone-color" id="phone-pink" value="Yellow">
+                                        <label class="form-check-label" for="phone-pink">Yellow</label>
                                     </div>
-                                    <strong class="price__color d-block ps-0">20.000.000</strong>
+                                    <strong class="price__color d-block ps-0">20,000,000</strong>
                                 </div>
                             </div>
                         </div>
@@ -262,11 +272,14 @@
             <div class="specifications row flex-row-reverse justify-content-around mb-3">
                 <div class="specifications__right col-12 col-lg-4 rounded-3">
                     <div class="wrapper shadow py-3">
-                        <h5 class="text-black fw-bold">Thông số kỹ thuật iPhone 14
+                        <h5 class="text-black fw-bold mx-3">Thông số kỹ thuật iPhone 14
                             ProMax
                             (256GB) - Chính hãng VNA</h5>
                         <div class="card border-0">
-                            <img src="./img/iPhone_14_Pro.webp" class="card-img-top p-5" alt="...">
+                            <div class="d-flex justify-content-center">
+                                <img src="./img/ip14-prm-black.webp" class="card-img-top p-5" alt="..."
+                                    style="max-width: 400px;">
+                            </div>
                             <div class="card-body d-flex flex-column">
                                 <button class="btn shadow rounded-3 my-3 fw-bold">
                                     <i class="fa fa-wrench title__color mx-2"></i>Cấu hình chi tiết
@@ -467,28 +480,50 @@
                 <form action="" class="my-3">
                     <div class="row mb-3">
                         <div class="col-4 d-flex">
-                            <input type="text" class="form-control shadow-none" placeholder="Họ tên*">
+                            <input type="text" class="form-control shadow-none" name="fullname" placeholder="Họ tên*">
                         </div>
                         <div class="col-4">
-                            <input type="text" class="form-control shadow-none" placeholder="Điện thoại">
+                            <input type="tel" class="form-control shadow-none" name="phone" placeholder="Điện thoại">
                         </div>
                         <div class="col-4">
-                            <input type="text" class="form-control shadow-none" placeholder="Email">
+                            <input type="email" class="form-control shadow-none" name="mail" placeholder="Email">
                         </div>
                     </div>
                     <div class="row mb-3 align-items-end">
                         <div class="col-12 col-sm mb-3 mb-sm-0">
-                            <textarea class="form-control shadow-none" name="" id="" rows="3"
+                            <textarea class="form-control shadow-none" name="comment" id="" rows="3"
                                 placeholder="Nhập nội dung của bạn"></textarea>
                         </div>
                         <div class="col-12 col-sm row justify-content-center">
                             <div class="col-12 d-flex justify-content-center">
-                                <button class="w-50 w-75 p-2 bg-white rounded-pill fw-bold" type="submit">GỬI BÌNH
+                                <button class="w-50 w-75 p-2 bg-white rounded-pill fw-bold" id="send-comment"
+                                    type="submit">GỬI BÌNH
                                     LUẬN</button>
                             </div>
                         </div>
                     </div>
                 </form>
+                <hr>
+                <div class="comment-component mt-3">
+                    <div class="comment-parent d-flex mb-3">
+                        <div class="comment__avatar bg-light rounded-circle" style="height: fit-content;">
+                            <i class="fa fa-user fs-2 p-4"></i>
+                        </div>
+                        <div class="ms-3 comment__content">
+                            <div class="user__comment">
+                                <div class="comment__name">
+                                    <b class="text-black">anh</b>
+                                </div>
+                                <div class="comment__time">
+                                    14:56:01 4/6/2023
+                                </div>
+                                <div class="text-black">
+                                    Sản phẩm rất tốt
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
