--- a/DES_PRODUCT/iphone14.html
+++ b/DES_PRODUCT/iphone14.html
@@ -14,6 +14,19 @@
 </head>
 
 <body>
+    <div class="toast">
+        <div class="toast-content">
+            <i class="fa fa-check check"></i>
+
+            <div class="message">
+                <div class="text text-1">Success</div>
+                <div class="text text-2">Your changes has been saved</div>
+            </div>
+        </div>
+        <i class="fa fa-times close"></i>
+
+        <div class="progress"></div>
+    </div>
 
     <!-- HEADER -->
     <header>
