--- a/PRODUCT/iPhone.html
+++ b/PRODUCT/iPhone.html
@@ -231,11 +231,11 @@
                     <div class="product row justify-content-center">
                         <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="../DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
-                                <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
+                                <div class="card-title text-black fw-bold"><a href="../DES_PRODUCT/iphone14.html"
                                         class="text-black text-decoration-none">iPhone 14
                                         Pro (256GB) - Chính hãng VN/A</a></div>
                                 <hr>
@@ -244,11 +244,11 @@
                         </div>
                         <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="../DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
-                                <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
+                                <div class="card-title text-black fw-bold"><a href="../DES_PRODUCT/iphone14.html"
                                         class="text-black text-decoration-none">iPhone 14
                                         Pro (256GB) - Chính hãng VN/A</a></div>
                                 <hr>
@@ -257,11 +257,11 @@
                         </div>
                         <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="../DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
-                                <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
+                                <div class="card-title text-black fw-bold"><a href="../DES_PRODUCT/iphone14.html"
                                         class="text-black text-decoration-none">iPhone 14
                                         Pro (256GB) - Chính hãng VN/A</a></div>
                                 <hr>
@@ -270,11 +270,11 @@
                         </div>
                         <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="../DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
-                                <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
+                                <div class="card-title text-black fw-bold"><a href="../DES_PRODUCT/iphone14.html"
                                         class="text-black text-decoration-none">iPhone 14
                                         Pro (256GB) - Chính hãng VN/A</a></div>
                                 <hr>
@@ -283,11 +283,11 @@
                         </div>
                         <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="../DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
-                                <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
+                                <div class="card-title text-black fw-bold"><a href="../DES_PRODUCT/iphone14.html"
                                         class="text-black text-decoration-none">iPhone 14
                                         Pro (256GB) - Chính hãng VN/A</a></div>
                                 <hr>
@@ -296,11 +296,11 @@
                         </div>
                         <div class="col-5 col-md-3 card mx-2 mb-3 border-0 p-0">
                             <div class="img d-flex justify-content-center align-items-center p-4">
-                                <a href="./DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
+                                <a href="../DES_PRODUCT/iphone14.html"><img src="./img/iphone14.webp" alt=""
                                         class="w-100"></a>
                             </div>
                             <div class="card-body">
-                                <div class="card-title text-black fw-bold"><a href="./DES_PRODUCT/iphone14.html"
+                                <div class="card-title text-black fw-bold"><a href="../DES_PRODUCT/iphone14.html"
                                         class="text-black text-decoration-none">iPhone 14
                                         Pro (256GB) - Chính hãng VN/A</a></div>
                                 <hr>
