--- a/CART/index.html
+++ b/CART/index.html
@@ -116,7 +116,7 @@
         <section class="wrap">
             <section class="menu mb-3">
                 <i class="fa fa-home"></i> <a href="../index.html">Trang chủ</a> <i class="fa fa-angle-right"></i>
-                <span>iPhone</span>
+                <span>Giỏ hàng</span>
             </section>
             <section class="content">
                 <h1 class="text-center fw-bold my-3">GIỎ HÀNG</h1>
