--- a/PRODUCT/airpods.html
+++ b/PRODUCT/airpods.html
@@ -116,7 +116,7 @@
         <div class="wrap">
             <div class="menu mb-3">
                 <i class="fa fa-home"></i> <a href="../index.html">Trang chủ</a> <i class="fa fa-angle-right"></i>
-                <span>iPhone</span>
+                <span>AirPods</span>
             </div>
             <div class="content row justify-content-center justify-content-md-between">
                 <div class="content__filter col-12 col-md-3 py-2" style="height: fit-content;">
