--- a/PRODUCT/orther.html
+++ b/PRODUCT/orther.html
@@ -116,7 +116,7 @@
         <div class="wrap">
             <div class="menu mb-3">
                 <i class="fa fa-home"></i> <a href="../index.html">Trang chủ</a> <i class="fa fa-angle-right"></i>
-                <span>iPhone</span>
+                <span>Khác</span>
             </div>
             <div class="content row justify-content-center justify-content-md-between">
                 <div class="content__filter col-12 col-md-3 py-2" style="height: fit-content;">
@@ -129,99 +129,39 @@
                         <div class="content__filter__title text-center mb-3">
                             <h5>LỌC SẢN PHẨM</h5>
                         </div>
-                        <div class="filter__group mb-3">
-                            <h6>Khoảng giá (đ)</h6>
-                            <div class="row">
-                                <div class="col-12 mb-3 mb-lg-0 col-lg">
-                                    <input type="text" class="form-control shadow-none" name="minPrice" id="minPrice"
-                                        placeholder="Tối thiểu (đ)">
-                                </div>
-                                <div class="col-12 col-lg">
-                                    <input type="text" class="form-control shadow-none" name="minPrice" id="minPrice"
-                                        placeholder="Tối đa (đ)">
-                                </div>
-                            </div>
-                        </div>
                         <hr>
-                        <div class="filter__group filter-version mb-3">
-                            <h6>Dung lượng bộ nhớ</h6>
+                        <div class="filter__group, filter-accessory mb-3">
+                            <h6>Loại Phụ Kiện</h6>
                             <div class="row justify-content-around">
                                 <div class="col-5 py-2 position-relative">
-                                    <input class="form-check-input shadow-none" type="checkbox" name="version"
-                                        id="128gb" value="128gb">
-                                    <label class="form-check-label ps-4" for="128gb">128GB</label>
+                                    <input class="form-check-input shadow-none" type="radio" name="accessory"
+                                        id="Ốp lưng" value="Ốp lưng">
+                                    <label class="form-check-label ps-4" for="Ốp lưng">Ốp lưng</label>
                                 </div>
                                 <div class="col-5 py-2 position-relative">
-                                    <input class="form-check-input shadow-none" type="checkbox" name="version"
-                                        id="256gb" value="option1">
-                                    <label class="form-check-label ps-4" for="256gb">256GB</label>
+                                    <input class="form-check-input shadow-none" type="radio" name="accessory"
+                                        id="Củ sạc" value="Củ sạc">
+                                    <label class="form-check-label ps-4" for="Củ sạc">Củ sạc</label>
                                 </div>
                                 <div class="col-5 py-2 position-relative">
-                                    <input class="form-check-input shadow-none" type="checkbox" name="version"
-                                        id="512gb" value="option1">
-                                    <label class="form-check-label ps-4" for="512gb">512GB</label>
+                                    <input class="form-check-input shadow-none" type="radio" name="accessory"
+                                        id="Dây cáp" value="Dây cáp">
+                                    <label class="form-check-label ps-4" for="Dây cáp">Dây cáp</label>
                                 </div>
                                 <div class="col-5 py-2 position-relative">
-                                    <input class="form-check-input shadow-none" type="checkbox" name="version" id="1T"
-                                        value="option1">
-                                    <label class="form-check-label ps-4" for="1T">1T</label>
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="filter__group, filter-color mb-3">
-                            <h6>Màu sắc</h6>
-                            <div class="row justify-content-around">
-                                <div class="col-5 py-2 position-relative">
-                                    <input class="form-check-input shadow-none" type="checkbox" name="white" id="white"
-                                        value="white">
-                                    <label class="form-check-label ps-4" for="white">Trắng</label>
+                                    <input class="form-check-input shadow-none" type="radio" name="accessory"
+                                        id="Bàn phím" value="Bàn phím">
+                                    <label class="form-check-label ps-4" for="Bàn phím">Bàn phím</label>
                                 </div>
                                 <div class="col-5 py-2 position-relative">
-                                    <input class="form-check-input shadow-none" type="checkbox" name="black" id="black"
-                                        value="black">
-                                    <label class="form-check-label ps-4" for="black">Đen</label>
+                                    <input class="form-check-input shadow-none" type="radio" name="accessory" id="Chuột"
+                                        value="Chuột">
+                                    <label class="form-check-label ps-4" for="Chuột">Chuột</label>
                                 </div>
                                 <div class="col-5 py-2 position-relative">
-                                    <input class="form-check-input shadow-none" type="checkbox" name="pink" id="pink"
-                                        value="pink">
-                                    <label class="form-check-label ps-4" for="pink">Hồng</label>
-                                </div>
-                                <div class="col-5 py-2 position-relative">
-                                    <input class="form-check-input shadow-none" type="checkbox" name="green" id="green"
-                                        value="green">
-                                    <label class="form-check-label ps-4" for="green">Xanh lá</label>
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="filter__group, filter-model mb-3">
-                            <h6>Thế hệ</h6>
-                            <div class="row justify-content-around">
-                                <div class="col-5 py-2 position-relative">
-                                    <input class="form-check-input shadow-none" type="radio" name="model" id="iphone14"
-                                        value="iphone14">
-                                    <label class="form-check-label ps-4" for="iphone14">iPhone 14</label>
-                                </div>
-                                <div class="col-5 py-2 position-relative">
-                                    <input class="form-check-input shadow-none" type="radio" name="model" id="iphone13"
-                                        value="iphone13">
-                                    <label class="form-check-label ps-4" for="iphone13">iPhone 13</label>
-                                </div>
-                                <div class="col-5 py-2 position-relative">
-                                    <input class="form-check-input shadow-none" type="radio" name="model" id="iphone12"
-                                        value="iphone12">
-                                    <label class="form-check-label ps-4" for="iphone12">iPhone 12</label>
-                                </div>
-                                <div class="col-5 py-2 position-relative">
-                                    <input class="form-check-input shadow-none" type="radio" name="model" id="iphone11"
-                                        value="iphone11">
-                                    <label class="form-check-label ps-4" for="iphone11">iPhone 11</label>
-                                </div>
-                                <div class="col-5 py-2 position-relative">
-                                    <input class="form-check-input shadow-none" type="radio" name="model" id="iphoneX"
-                                        value="iphoneX">
-                                    <label class="form-check-label ps-4" for="iphoneX">iPhone X </label>
+                                    <input class="form-check-input shadow-none" type="radio" name="accessory" id="Khác"
+                                        value="Khác">
+                                    <label class="form-check-label ps-4" for="Khác">Khác</label>
                                 </div>
                             </div>
                         </div>
