--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.7.0.js"
         integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="CSS/style.css">
     <title>Apple Mart</title>
 </head>
@@ -670,42 +671,42 @@
                 </div>
                 <hr class="m-0">
                 <div class="phukien__product row justify-content-around my-3">
-                    <div class="card mx-0 col-4 col-lg-2">
+                    <a href="./PRODUCT/orther.html" class="card text-decoration-none mx-0 col-4 col-lg-2">
                         <div class="img d-flex justify-content-center align-items-center p-3">
                             <img src="./img/oplung.webp" alt="">
                         </div>
                         <h5 class="text-center py-2 text-black">Ốp Lưng</h5>
-                    </div>
-                    <div class="card mx-0 col-4 col-lg-2">
+                    </a>
+                    <a href="./PRODUCT/orther.html" class="card text-decoration-none mx-0 col-4 col-lg-2">
                         <div class="img d-flex justify-content-center align-items-center p-3">
                             <img src="./img/cusac.webp" alt="">
                         </div>
                         <h5 class="text-center py-2 text-black">Củ Sạc</h5>
-                    </div>
-                    <div class="card mx-0 col-4 col-lg-2">
+                    </a>
+                    <a href="./PRODUCT/orther.html" class="card text-decoration-none mx-0 col-4 col-lg-2">
                         <div class="img d-flex justify-content-center align-items-center p-3">
                             <img src="./img/day-cap.webp" alt="">
                         </div>
                         <h5 class="text-center py-2 text-black">Dây Cáp</h5>
-                    </div>
-                    <div class="card mx-0 col-4 col-lg-2">
+                    </a>
+                    <a href="./PRODUCT/orther.html" class="card text-decoration-none mx-0 col-4 col-lg-2">
                         <div class="img d-flex justify-content-center align-items-center p-3">
                             <img src="./img/ban-phim.webp" alt="">
                         </div>
                         <h5 class="text-center py-2 text-black">Bàn Phím</h5>
-                    </div>
-                    <div class="card mx-0 col-4 col-lg-2">
+                    </a>
+                    <a href="./PRODUCT/orther.html" class="card text-decoration-none mx-0 col-4 col-lg-2">
                         <div class="img d-flex justify-content-center align-items-center p-3">
                             <img src="./img/chuot.png" alt="">
                         </div>
                         <h5 class="text-center py-2 text-black">Chuột</h5>
-                    </div>
-                    <div class="card mx-0 col-4 col-lg-2">
+                    </a>
+                    <a href="./PRODUCT/orther.html" class="card text-decoration-none mx-0 col-4 col-lg-2">
                         <div class="img d-flex justify-content-center align-items-center p-3">
                             <img src="./img/apple-logo.png" alt="">
                         </div>
                         <h5 class="text-center py-2 text-black">Sản Phẩm Khác</h5>
-                    </div>
+                    </a>
                 </div>
             </div>
         </section>
